--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.25.3",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
